Use Java's built in URI resolution
git-svn-id: https://svn.apache.org/repos/asf/webservices/commons/trunk/modules/XmlSchema@400374 13f79535-47bb-0310-9956-ffa450edef68